Fixed thought tracker list table layout issue.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2724,7 +2724,7 @@ span.coursetime-innercontent {
 .toolbox-record table td:first-child,
 .toolbox-record table th:first-child {
     border-radius: 10px 0 0 10px;
-    width: 300px;
+    /*width: 300px;*/
 }
 
 .toolbox-record table td:last-child,
